--- a/app/src/main/res/layout/activity_survey_rating.xml
+++ b/app/src/main/res/layout/activity_survey_rating.xml
@@ -33,10 +33,19 @@
                 android:textColor="@color/white"
                 android:textStyle="normal" />
         </android.support.v7.widget.Toolbar>
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                >
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:longClickable="false"
             android:background="#fff"
             android:id="@+id/relativeLayout">
@@ -124,7 +133,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         rb:rating="3.2"
-                        android:clickable="false" />
+                        />
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
@@ -146,7 +155,7 @@
                         android:layout_gravity="center"
                         xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating1"
-                        style="@style/coloredRatingBarStyleIndicator"
+                        style="@style/coloredRatingBarStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         rb:rating="3.2" />
@@ -172,7 +181,7 @@
                         android:layout_gravity="center"
                         xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating2"
-                        style="@style/coloredRatingBarStyleIndicator"
+                        style="@style/coloredRatingBarStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         rb:rating="3.2" />
@@ -198,7 +207,7 @@
                         android:layout_gravity="center"
                         xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating3"
-                        style="@style/coloredRatingBarStyleIndicator"
+                        style="@style/coloredRatingBarStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         rb:rating="3.2" />
@@ -213,7 +222,7 @@
                     <TextView
                         android:layout_width="160dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity="top"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="@string/overall"
                         android:id="@+id/textView5"
@@ -224,7 +233,7 @@
                         android:layout_gravity="center"
                         xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating4"
-                        style="@style/coloredRatingBarStyleIndicator"
+                        style="@style/coloredRatingBarStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         rb:rating="3.2" />
@@ -233,21 +242,34 @@
 
 
             </LinearLayout>
-            <com.melnykov.fab.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:layout_gravity="bottom|right" android:src="@drawable/fab_green"
-                fab:fab_colorNormal="@color/primary"
-                fab:fab_colorPressed="@color/primary_pressed"
-                fab:fab_colorRipple="@color/ripple"
-                fab:fab_shadow="true"
-                android:scaleType="centerCrop"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="24dp"/>
-        </RelativeLayout>
+
+
+            </RelativeLayout>
+
+                <com.melnykov.fab.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/fab_green"
+                    fab:fab_colorNormal="@color/primary"
+                    fab:fab_colorPressed="@color/primary_pressed"
+                    fab:fab_colorRipple="@color/ripple"
+                    fab:fab_shadow="true"
+                    android:scaleType="centerCrop"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="right" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/white"/>
+        </LinearLayout>
+        </ScrollView>
+
     </android.support.design.widget.AppBarLayout>
 
 
