--- a/app/src/main/res/layout/fragment_search_speciality.xml
+++ b/app/src/main/res/layout/fragment_search_speciality.xml
@@ -8,25 +8,34 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/search"
-            android:id="@+id/textViewSearch"
-            android:textColor="@color/black"
-            android:layout_marginLeft="50dp"
-            android:textSize="26sp"/>
+            android:padding="5dp">
 
         <EditText
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="42dp"
             android:singleLine="true"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/editText"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="26sp"
+            android:textSize="18sp"
+            android:hint="  Start Typing Here"
+            android:textColorHighlight="@color/colorPrimary"
+            android:textColorHint="#959595"
             />
+            <Button
+                android:id="@+id/clearEditText"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="right|center_vertical"
+                android:background="@drawable/close" />
+
+        </FrameLayout>
     </LinearLayout>
 
     <ListView
