--- a/app/src/main/res/layout/fragment_serach_name.xml
+++ b/app/src/main/res/layout/fragment_serach_name.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".search.NameFragment">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/search"
-            android:id="@+id/textViewSearch"
-            android:textColor="@color/black"
-            android:layout_marginLeft="50dp"
-            android:textSize="26sp"/>
+            android:padding="5dp">
 
-        <EditText
-            android:singleLine="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/editTextSearchField"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:textSize="26sp"
-            />
+            <EditText
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="42dp"
+                android:singleLine="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText"
+                android:layout_weight="1"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:hint="  Start Typing Here"
+                android:textColorHighlight="@color/colorPrimary"
+                android:textColorHint="#959595"
+                />
+            <Button
+                android:id="@+id/clearEditText"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="right|center_vertical"
+                android:background="@drawable/close" />
+
+        </FrameLayout>
     </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/listView"
+        app:layout_scrollFlags="scroll"
        />
 
 
