--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,9 +12,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="32sp" />
 
     <TextView
+        android:theme="MyTabLayoutTextAppearance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -23,5 +25,8 @@
         android:layout_below="@+id/textViewTitle"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#464646" />
+        android:textColor="#464646"
+        android:textSize="36sp"
+        android:textStyle="italic"
+        android:singleLine="false" />
 </RelativeLayout>
