--- a/app/src/main/res/layout/activity_set_pass.xml
+++ b/app/src/main/res/layout/activity_set_pass.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:popupTheme="@style/Theme.AppCompat.NoActionBar"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.medhigh.meetmd.login.NewPasswordActivity">
 
     <!-- Login progress -->
@@ -21,34 +21,34 @@
         android:visibility="gone" />
 
     <ImageView
+        android:id="@+id/doctorImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="500sp"
-        android:id="@+id/doctorImage"
-        android:src="@drawable/bb"
-        android:contentDescription="Logo"
-        android:scaleType="fitCenter"
         android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:contentDescription="Logo"
+        android:maxHeight="500sp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/bb"
         />
 
     <TextView
-        android:textColor="@color/black"
-        android:textSize="22sp"
+        android:id="@+id/insurence_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/set_new_pass"
-        android:id="@+id/insurence_number"
-        android:layout_margin="5dp"
         android:layout_below="@+id/doctorImage"
+        android:layout_margin="5dp"
+        android:text="@string/set_new_pass"
+        android:textColor="@color/black"
+        android:textSize="22sp"
          />
 
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/insurence_number"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/insurence_number">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -57,43 +57,45 @@
             android:orientation="vertical">
 
             <EditText
+                android:id="@+id/passEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/passEditText"
-                android:singleLine="true"
+                android:hint="@string/password"
                 android:imeOptions="actionNext"
-                android:hint="@string/password" />
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#828282" />
 
             <EditText
+                android:id="@+id/confirmEditText2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/confirmEditText2"
-                android:singleLine="true"
+                android:hint="@string/confirm_pass"
                 android:imeOptions="actionDone"
-                android:hint="@string/confirm_pass" />
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#828282" />
         </LinearLayout>
     </ScrollView>
 
     <Button
-        android:background="@color/colorPrimary"
-        android:textColor="@color/white"
+        android:id="@+id/buttonLogin"
+        style="@style/Base.V22.Theme.AppCompat.Light"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:id="@+id/buttonLogin"
-        android:clickable="true"
-        android:textSize="20sp"
-        style="@style/Base.V22.Theme.AppCompat.Light"
-        android:singleLine="false"
         android:layout_alignTop="@+id/login_form"
         android:layout_marginTop="87dp"
-        android:onClick="onClickLogin" />
+        android:background="@color/colorPrimary"
+        android:clickable="true"
+        android:onClick="onClickLogin"
+        android:singleLine="false"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
