--- a/app/src/main/res/layout/fragment_list_view_rating_name.xml
+++ b/app/src/main/res/layout/fragment_list_view_rating_name.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:onClick="onClick">
+        android:orientation="horizontal">
 
-        <in.flashbulb.coloredratingbar.ColoredRatingBar
+        <in.flashbulb.coloredratingbar.ColoredRatingBar xmlns:rb="http://schemas.android.com/apk/res-auto"
             android:id="@+id/rating"
-            android:layout_height="wrap_content"
+            style="@style/coloredRatingBarStyleSmallIndicator"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
             android:isIndicator="true"
-            xmlns:rb="http://schemas.android.com/apk/res-auto"
-            android:layout_gravity="center"
-            style="@style/coloredRatingBarStyleSmallIndicator"
             rb:rating="4.8"
             />
 
         <TextView
+            android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/name"
-            android:id="@+id/textViewName"
-            android:textSize="18sp"
             android:layout_marginLeft="20dp"
-            android:textColor="@color/black" />
+            android:text="@string/name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="6dp"
-        android:background="#717171" />
+        android:background="#717171"
+        android:orientation="horizontal" />
 
 </LinearLayout>
