--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -4,29 +4,28 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Take the pill"
-        android:id="@+id/textViewTitle"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Take the pill"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#000000"
         android:textSize="32sp" />
 
     <TextView
-        android:theme="MyTabLayoutTextAppearance"
+        android:id="@+id/textViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Every day at 8:30"
-        android:id="@+id/textViewTime"
-        android:layout_below="@+id/textViewTitle"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/textViewTitle"
+        android:singleLine="false"
+        android:text="Every day at 8:30"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#464646"
         android:textSize="36sp"
-        android:textStyle="italic"
-        android:singleLine="false" />
+        android:textStyle="italic" />
 </RelativeLayout>
