--- a/app/src/main/res/layout/fragment_search_location.xml
+++ b/app/src/main/res/layout/fragment_search_location.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="search by location"
-        android:textColor="@color/black"
-        tools:context="com.example.medhigh.meetmd.search.MapFragment"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.example.medhigh.mapfragmet.MapsActivity"
+    >
+
 </LinearLayout>
